# gea_module_0

./: .gitignore  README.md  pyproject.toml  requirements.txt
app_core/: settings.py  urls.py  wsgi.py
apps/common/core/: admin.py  forms.py  functions.py  models.py  urls.py  views.py
apps/common/utils/: admin.py  attack_patterns.py  cron.py  models.py  urls.py  views.py
public/staticfiles/: manifest.json  site.webmanifest
public/staticfiles/css/: gold_button.css  gradient_button.css  gradient_header.css  hero.css  scroll_behavior.css  styles.css
public/staticfiles/js/: error_template.js  scripts.js  simple-datatable.js
templates/: errors_template.html  footer.html  raw.html
templates/account/: change_password.html  forgot_password.html  gea_register.html  password_reset_email.html
templates/account/layout/: account.html
templates/account/partials/: _floating_input.html
templates/admin/: change_list.html
templates/core/: base.html  index.html
templates/core/email/: contact_email_template.html  purchase_order_email_template.html
templates/core/index/: index.html
templates/core/partials/: core_nav.html  header.html
templates/dashboard/: base.html  dashboard_layout_base.html
templates/dashboard/account/: gea_register.html  (+1 more)
templates/email/: contact_email_template.html  purchase_order_email_template.html  service_order_email_template.html
templates/two_factor/: _base.html  _wizard_actions.html  _wizard_forms.html
templates/video_masonry/: _media_grid.html  gallery.html
zz csv import/: asset_names.csv  assets.csv  categories.csv
(+316 files in other folders)
